Finish data.json + QoL Setup descriptions of all packs Place popup close button in the bottom right corner so it doesn't overlap with text Fixed comment validation on server

--- a/src/dashboard/public/styles/packs.css
+++ b/src/dashboard/public/styles/packs.css
@@ -179,12 +179,13 @@ dialog {
 
     form {
         position: absolute;
+        bottom: 1rem;
         right: 1rem;
-        top: 1rem;
     }
 
     .error {
         color: var(--secondary);
         font-weight: bold;
     }
+
 }
